true structure